--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,32 +3,21 @@
 <p style="text-align:center">Select up to <%= @max_colors %> ugly colors and <%= @max_colors %> great colors!</p>
 
 <!-- Middle: Ugly | Color Box | Nice -->
-<div style="display: flex; justify-content: center;">
+<div style="display: flex; text-align:center; justify-content: center;">
 
-  <!-- Left Column: Ugly Colors -->
-  <!-- The flex: 1; tells the element how much space it should take up relative to its siblings inside a flex container. Pulls from application.css-->
   <div id="ugly_colors" class="sortable-list" style="flex: 1;">
-    <!-- When someone votes a color as ugly, Top Ugly Colors show up. Otherwise, it's hidden. -->
+
     <% if @ugly_colors.present? %>
       <h3>Top Ugly Colors</h3>
-      <!-- <ul> stands for unordered list. An HTML element used to group a list of items where order doesn't matter (i.e., no numbering). Inside a <ul>, you typically use <li> elements. <ul> auto adds bullet points and denting. The style removes the bullet points and denting. -->
-      <!-- The id is defined here, basically a label. The functionality is written in javascript block. -->
       <ul id="ugly_colors_list" style="text-align: center; list-style-type:none; padding: 0;">
 
-        <!-- This pulls from home_controller.rb, where @ugly_colors is an array of colors that has 'is_ugly' set to 'true'. -->
-        <!-- .take Ruby method limits the number of @ugly_colors to the value of @max_colors. Taking into account the ordering defined by @ugly_colors in home_controller.rb. -->
-        <!-- .each do |color_vote| is a loop. color_vote represents the element in the @ugly_colors array. The following code loops through color_vote element of @ugly_colors. -->
         <% @ugly_colors.take(@max_colors).each do |color_vote| %>
-          <!-- <li> is a list that's usually in <ul>. -->
-          <!-- data-id is a data attribute. And color_vote.id is the ID # that identifies which color_vote it is, as votes come in. -->
           <li data-id="<%= color_vote.id %>" style="flex-direction: column; margin: 10px 0; cursor: grab; display: flex; justify-content: center; margin-bottom: 30px;">
             <span style="font-weight: bold;">&nbsp;Rank:&nbsp;<span class="position-number" style="font-weight: normal;"><%= color_vote.position.to_i + 1 %></span></span>
 
             <div style="display: flex; flex-direction: column; align-items: center;">
               <div class="side-color-box" style= "background-color: <%= color_vote.hex_color %>;"></div>
               <p style="margin: 4px 0 0 0; font-size: 12px;">Hex: <%= color_vote.hex_color %></p>
-            <!-- <span> is an inline HTML element used to group and style small chunks of text or content without affecting the layout structure. Rank is hard-coded. -->
-            <!-- color_vote.position starts at 0 so to let users see the ranking start at 1, add +1 to color_vote.position. -->
             </div>
           </li>
         <% end %>
@@ -103,15 +92,13 @@
 
     <div>
       <form method="post" action="/reset">
-        <!-- Adds hidden input field that includes CSRF protection token. Required for "post" methods. -->
-        <!-- Analogy: Mailing an envelope. Write stuff (inputs), seal it with stamp (token), drop it mailbox (submit), goes to address (action), handled by someone (controller). -->
         <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <button type="submit">Reset</button>
       </form>
     </div>
 
     <!-- Route to Color Pairs page -->
-    <div style="margin: 69px;">
+    <div style="margin-top: 69px; margin-bottom: 15px;">
       <%= link_to "Color Pairs Ranker", rank_color_pairs_path %>
     </div>
     
