--- a/app/views/pairs/rank_color_pairs.html.erb
+++ b/app/views/pairs/rank_color_pairs.html.erb
@@ -9,12 +9,11 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  
+  <h1 style="text-align:center">Welcome to Color Pair Ranker!</h1>
+  <h2 style="text-align:center">Which color pair do you like better?</h2>
+  <p style="text-align:center">Select up to <%= @max_pairs %> ugly pairs and <%= @max_pairs %> great pairs!</p>
   <body>
-    <h1 style="text-align:center">Welcome to Color Pair Ranker!</h1>
-    <h2 style="text-align:center">Which color pair do you like better?</h2>
-    <p style="text-align:center">Select up to <%= @max_pairs %> ugly pairs and <%= @max_pairs %> great pairs!</p>
-    <div class="flex flex-col md:flex-row justify-center">
+    <div style="display: flex; justify-content: center;">
 
       <!-- Ugly pairs column -->
       <div id="ugly_pairs" class="sortable-list" style="flex: 1;">
